# infravelo-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
api-fetcher/: main.py
scraper/: core.py
sync/: core.py  document_downloader.py  runner.py
tests/: test_document_downloader.py  test_sync.py
